--- a/images/index.html
+++ b/images/index.html
@@ -24,14 +24,14 @@
     text-shadow: 0 0 2px white;
 }
 .jumbotron{
-    background-image: url(images/image6.jpg);
+    background-image: url(image6.jpg);
 }
 .card-footer {
     background-color: red;
     text-align: center;
 }
 .demo{
-    background-image: url(images/1.jpg);
+    background-image: url(1.jpg);
     color:gainsboro;
         margin: auto;
         position: relative;
@@ -47,7 +47,7 @@ footer{
     <body>
         <nav class="navbar  navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="images/log.jpg" alt="" height="50px">
+                <img src="log.jpg" alt="" height="50px">
             </a>
           </nav>
         <div class="jumbotron">
@@ -61,7 +61,7 @@ footer{
           <div class="container">
           <div class="card-deck">
             <div class="card">
-              <img class="card-img-top" src="images/image13.jpg" alt="Card image cap">
+              <img class="card-img-top" src="image13.jpg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title text-center">Software</h5>
                 <p class="card-text">A In computer science and software engineering, computer software is all information processed by computer systems, programs and data. Computer software includes computer programs, libraries and related non-executable data, such as online documentation or digital media.
@@ -76,7 +76,7 @@ footer{
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="images/image23.jpg" alt="Card image cap">
+              <img class="card-img-top" src="image23.jpg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title text-center">Android</h5>
                 <p class="card-text">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. ... Some well known derivatives include Android TV for televisions and Wear OS for wearables, both developed by Google.
@@ -91,7 +91,7 @@ footer{
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="images/images24.jpg" alt="Card image cap">
+              <img class="card-img-top" src="images24.jpg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title text-center">Coding</h5>
                 <p class="card-text">Coding theory is the study of the properties of codes and their respective fitness for specific applications. Codes are used for data compression, cryptography, error detection and correction, data transmission and data storage. ... Cryptographic coding. Line coding..</p>
@@ -126,7 +126,7 @@ footer{
                         Language designers: James Gosling, Oracle C...Software</p>
                 </div>
                 <div class="col-md-6">
-                        <img src="images/java.jpg" class="img-fluid img-thumbnail c_image">
+                        <img src="java.jpg" class="img-fluid img-thumbnail c_image">
                     </a>
                 </div>
             </div>
@@ -137,7 +137,7 @@ footer{
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                        <img src="images/img3.jpg" class="img-fluid img-thumbnail c_image">
+                        <img src="img3.jpg" class="img-fluid img-thumbnail c_image">
                     </a>
                 </div>
                 <div class="col-md-6">
